@@ -41,7 +41,7 @@ pixbuf_proto_get_socket (GError **err)
   fd = socket (PF_LOCAL, SOCK_STREAM, 0);
   if (fd < 0)
     {
-      g_set_error (err, SAPWOOD_PIXMAP_ERROR, SAPWOOD_PIXMAP_ERROR_FAILED,
+      g_set_error (err, SAPWOOD_CLIENT_ERROR, SAPWOOD_PIXMAP_ERROR_FAILED,
 		   "socket: %s", strerror (errno));
       return -1;
     }
@@ -57,7 +57,7 @@ pixbuf_proto_get_socket (GError **err)
 #endif
   if (connect (fd, (struct sockaddr *)&sun, sizeof (sun)) < 0)
     {
-      g_set_error (err, SAPWOOD_PIXMAP_ERROR, SAPWOOD_PIXMAP_ERROR_FAILED,
+      g_set_error (err, SAPWOOD_CLIENT_ERROR, SAPWOOD_PIXMAP_ERROR_FAILED,
 		   "Failed to connect to sapwood server using `%s': %s\n\n"
 		   "\t`%s' MUST be started before applications",
 		   sock_path, strerror (errno),
@@ -89,14 +89,14 @@ pixbuf_proto_request (const char *req,
   n = write (fd, req, reqlen);
   if (n < 0)
     {
-      g_set_error (err, SAPWOOD_PIXMAP_ERROR, SAPWOOD_PIXMAP_ERROR_FAILED,
+      g_set_error (err, SAPWOOD_CLIENT_ERROR, SAPWOOD_PIXMAP_ERROR_FAILED,
 		   "write: %s", g_strerror (errno));
       return FALSE;
     }
   else if (n != reqlen)
     {
       /* FIXME */
-      g_set_error (err, SAPWOOD_PIXMAP_ERROR, SAPWOOD_PIXMAP_ERROR_FAILED,
+      g_set_error (err, SAPWOOD_CLIENT_ERROR, SAPWOOD_PIXMAP_ERROR_FAILED,
 		   "wrote %d of %d bytes", n, reqlen);
       return FALSE;
     }
@@ -107,14 +107,14 @@ pixbuf_proto_request (const char *req,
   n = read (fd, rep, replen);
   if (n < 0)
     {
-      g_set_error (err, SAPWOOD_PIXMAP_ERROR, SAPWOOD_PIXMAP_ERROR_FAILED,
+      g_set_error (err, SAPWOOD_CLIENT_ERROR, SAPWOOD_PIXMAP_ERROR_FAILED,
 		   "read: %s", g_strerror (errno));
       return FALSE;
     }
   else if (n != replen)
     {
       /* FIXME */
-      g_set_error (err, SAPWOOD_PIXMAP_ERROR, SAPWOOD_PIXMAP_ERROR_FAILED,
+      g_set_error (err, SAPWOOD_CLIENT_ERROR, SAPWOOD_PIXMAP_ERROR_FAILED,
 		   "read %d, expected %d bytes", n, replen);
       return FALSE;
     }
@@ -141,7 +141,7 @@ sapwood_pixmap_get_for_file (const char *filename,
   flen = g_strlcpy (req->filename, filename, PATH_MAX);
   if (flen > PATH_MAX)
     {
-      g_set_error (err, SAPWOOD_PIXMAP_ERROR, SAPWOOD_PIXMAP_ERROR_FAILED,
+      g_set_error (err, SAPWOOD_CLIENT_ERROR, SAPWOOD_PIXMAP_ERROR_FAILED,
 		   "%s: filename too long", filename);
       return NULL;
     }
